Address linter (#444)
* linter: Convert all spaces to tabs

* Address linting issues across all java files

* Updated deprecated RuneLite API calls

* Enabled GitHub CI and Gradle ChecksStyle checks

* Update GitHub CI action versions

---------

Co-authored-by: Frans Irgolitsch <f.irgolitsch@outlook.com>